Grammar/ArabicWebParser.java
// Generated from ArabicWebParser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ArabicWebParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLOSE_TAG=1, OPEN_TAG=2, TEXT=3, DISPLAY=4, POSITION=5, WIDTH=6, HEIGHT=7, 
		MAX_WIDTH=8, MIN_WIDTH=9, MAX_HEIGHT=10, MIN_HEIGHT=11, MARGIN=12, PADDING=13, 
		BORDER=14, VISIBILITY=15, OVERFLOW=16, Z_INDEX=17, BOX_SIZING=18, FLEX=19, 
		FLEX_DIR=20, FLEX_WRAP=21, FLEX_GROW=22, FLEX_SHRINK=23, GRID=24, GRID_TEMPLATE=25, 
		GAP=26, JUSTIFY_CONT=27, ALIGN_ITEMS=28, ALIGN_SELF=29, ORDER=30, COLOR=31, 
		BACKGROUND=32, BG_IMAGE=33, BG_COLOR=34, BG_SIZE=35, BG_REPEAT=36, BG_ATTACH=37, 
		BG_CLIP=38, OPACITY=39, BOX_SHADOW=40, FONT_FAMILY=41, FONT_SIZE=42, FONT_WEIGHT=43, 
		FONT_STYLE=44, TEXT_ALIGN=45, TEXT_DECOR=46, TEXT_TRANS=47, TEXT_SHADOW=48, 
		TEXT_INDENT=49, LINE_HEIGHT=50, LETTER_SPACING=51, WORD_SPACING=52, WHITE_SPACE=53, 
		DIRECTION=54, WRITING_MODE=55, BORDER_RADIUS=56, BORDER_WIDTH=57, BORDER_STYLE=58, 
		BORDER_COLOR=59, OUTLINE=60, TOP=61, BOTTOM=62, RIGHT=63, LEFT=64, MEDIA=65, 
		LIST_STYLE=66, BORDER_COLLAPSE=67, TABLE_LAYOUT=68, CAPTION_SIDE=69, FILTER=70, 
		BACKDROP_FILT=71, HOVER=72, ACTIVE=73, FOCUS=74, VISITED=75, ENABLED=76, 
		DISABLED=77, CHECKED=78, BEFORE=79, AFTER=80, PLACEHOLDER=81, SELECTION=82, 
		INHERIT=83, INITIAL=84, UNSET=85, NONE=86, AUTO=87, CENTER=88, SOLID=89, 
		DASHED=90, DOTTED=91, DOUBLE=92, KW_HIDDEN=93, BLOCK=94, INLINE=95, FLEX_VALUE=96, 
		ABSOLUTE=97, RELATIVE=98, FIXED=99, STICKY=100, ROW=101, COLUMN=102, WRAP=103, 
		POINTER=104, BOLD=105, ITALIC=106, IMPORTANT=107, UNIT=108, NUMBER=109, 
		HEX_COLOR=110, IDENTIFIER=111, STRING=112, URL_FUNC=113, RGB_FUNC=114, 
		RGBA_FUNC=115, CALC_FUNC=116, VAR_FUNC=117, ROTATE_FUNC=118, SCALE_FUNC=119, 
		BLUR_FUNC=120, WS=121, COMMENT=122, LINE_COMMENT=123, LBRACE=124, RBRACE=125, 
		COLON=126, SEMI=127, COMMA=128, DOT=129, HASH=130, LPAREN=131, RPAREN=132, 
		PLUS=133, MINUS=134, STAR=135, SLASH=136, PERCENT=137, GT=138, LT=139, 
		TILDE=140, BANG=141, DBL_COLON=142;
	public static final int
		RULE_document = 0, RULE_element = 1, RULE_tagElement = 2, RULE_statement = 3, 
		RULE_mediaRule = 4, RULE_mediaQueryList = 5, RULE_mediaQuery = 6, RULE_mediaExpr = 7, 
		RULE_ruleset = 8, RULE_selectorList = 9, RULE_selector = 10, RULE_combinator = 11, 
		RULE_compoundSelector = 12, RULE_className = 13, RULE_idName = 14, RULE_simpleSelector = 15, 
		RULE_pseudoClass = 16, RULE_pseudoElement = 17, RULE_declarationList = 18, 
		RULE_declaration = 19, RULE_exprModifier = 20, RULE_property = 21, RULE_value = 22, 
		RULE_expr = 23, RULE_term = 24, RULE_dimension = 25, RULE_keywordValue = 26, 
		RULE_functionCall = 27, RULE_functionName = 28, RULE_arguments = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "element", "tagElement", "statement", "mediaRule", "mediaQueryList", 
			"mediaQuery", "mediaExpr", "ruleset", "selectorList", "selector", "combinator", 
			"compoundSelector", "className", "idName", "simpleSelector", "pseudoClass", 
			"pseudoElement", "declarationList", "declaration", "exprModifier", "property", 
			"value", "expr", "term", "dimension", "keywordValue", "functionCall", 
			"functionName", "arguments"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'\\u0639\\u0631\\u0636'", "'\\u0645\\u0648\\u0642\\u0639'", 
			"'\\u0639\\u0631\\u0636-\\u0627\\u0644\\u0645\\u0633\\u0627\\u062D\\u0629'", 
			"'\\u0637\\u0648\\u0644-\\u0627\\u0644\\u0645\\u0633\\u0627\\u062D\\u0629'", 
			"'\\u0623\\u0642\\u0635\\u0649-\\u0639\\u0631\\u0636'", "'\\u0623\\u0642\\u0644-\\u0639\\u0631\\u0636'", 
			"'\\u0623\\u0642\\u0635\\u0649-\\u0637\\u0648\\u0644'", "'\\u0623\\u0642\\u0644-\\u0637\\u0648\\u0644'", 
			"'\\u0647\\u0627\\u0645\\u0634'", "'\\u062D\\u0634\\u0648'", "'\\u0625\\u0637\\u0627\\u0631'", 
			"'\\u0627\\u0644\\u0638\\u0647\\u0648\\u0631'", "'\\u0641\\u0627\\u0626\\u0636'", 
			"'\\u062A\\u0631\\u062A\\u064A\\u0628-\\u0627\\u0644\\u0639\\u0645\\u0642'", 
			"'\\u062A\\u062D\\u062C\\u064A\\u0645-\\u0627\\u0644\\u0635\\u0646\\u062F\\u0648\\u0642'", 
			"'\\u0645\\u0631\\u0646'", "'\\u0627\\u062A\\u062C\\u0627\\u0647-\\u0627\\u0644\\u0645\\u0631\\u0648\\u0646\\u0629'", 
			"'\\u0644\\u0641-\\u0627\\u0644\\u0645\\u0631\\u0648\\u0646\\u0629'", 
			"'\\u0646\\u0645\\u0648-\\u0627\\u0644\\u0645\\u0631\\u0648\\u0646\\u0629'", 
			"'\\u0627\\u0646\\u0643\\u0645\\u0627\\u0634-\\u0627\\u0644\\u0645\\u0631\\u0648\\u0646\\u0629'", 
			"'\\u0634\\u0628\\u0643\\u0629'", "'\\u0642\\u0627\\u0644\\u0628-\\u0627\\u0644\\u0634\\u0628\\u0643\\u0629'", 
			"'\\u0641\\u062C\\u0648\\u0629'", "'\\u0636\\u0628\\u0637-\\u0627\\u0644\\u0645\\u062D\\u062A\\u0648\\u0649'", 
			"'\\u0645\\u062D\\u0627\\u0630\\u0627\\u0629-\\u0627\\u0644\\u0639\\u0646\\u0627\\u0635\\u0631'", 
			"'\\u0645\\u062D\\u0627\\u0630\\u0627\\u0629-\\u0630\\u0627\\u062A\\u064A\\u0629'", 
			"'\\u062A\\u0631\\u062A\\u064A\\u0628'", "'\\u0644\\u0648\\u0646'", "'\\u062E\\u0644\\u0641\\u064A\\u0629'", 
			"'\\u0635\\u0648\\u0631\\u0629-\\u0627\\u0644\\u062E\\u0644\\u0641\\u064A\\u0629'", 
			"'\\u0644\\u0648\\u0646-\\u0627\\u0644\\u062E\\u0644\\u0641\\u064A\\u0629'", 
			"'\\u062D\\u062C\\u0645-\\u0627\\u0644\\u062E\\u0644\\u0641\\u064A\\u0629'", 
			"'\\u062A\\u0643\\u0631\\u0627\\u0631-\\u0627\\u0644\\u062E\\u0644\\u0641\\u064A\\u0629'", 
			"'\\u062A\\u062B\\u0628\\u064A\\u062A-\\u0627\\u0644\\u062E\\u0644\\u0641\\u064A\\u0629'", 
			"'\\u0642\\u0635-\\u0627\\u0644\\u062E\\u0644\\u0641\\u064A\\u0629'", 
			"'\\u0634\\u0641\\u0627\\u0641\\u064A\\u0629'", "'\\u0638\\u0644-\\u0627\\u0644\\u0635\\u0646\\u062F\\u0648\\u0642'", 
			"'\\u0646\\u0648\\u0639-\\u0627\\u0644\\u062E\\u0637'", "'\\u062D\\u062C\\u0645-\\u0627\\u0644\\u062E\\u0637'", 
			"'\\u062B\\u0642\\u0644-\\u0627\\u0644\\u062E\\u0637'", "'\\u0646\\u0645\\u0637-\\u0627\\u0644\\u062E\\u0637'", 
			"'\\u0645\\u062D\\u0627\\u0630\\u0627\\u0629-\\u0627\\u0644\\u0646\\u0635'", 
			"'\\u0632\\u062E\\u0631\\u0641\\u0629-\\u0627\\u0644\\u0646\\u0635'", 
			"'\\u062A\\u062D\\u0648\\u064A\\u0644-\\u0627\\u0644\\u0646\\u0635'", 
			"'\\u0638\\u0644-\\u0627\\u0644\\u0646\\u0635'", "'\\u0625\\u0632\\u0627\\u062D\\u0629-\\u0627\\u0644\\u0646\\u0635'", 
			"'\\u0627\\u0631\\u062A\\u0641\\u0627\\u0639-\\u0627\\u0644\\u0633\\u0637\\u0631'", 
			"'\\u062A\\u0628\\u0627\\u0639\\u062F-\\u0627\\u0644\\u0623\\u062D\\u0631\\u0641'", 
			"'\\u062A\\u0628\\u0627\\u0639\\u062F-\\u0627\\u0644\\u0643\\u0644\\u0645\\u0627\\u062A'", 
			"'\\u0627\\u0644\\u0645\\u0633\\u0627\\u062D\\u0629-\\u0627\\u0644\\u0628\\u064A\\u0636\\u0627\\u0621'", 
			"'\\u0627\\u062A\\u062C\\u0627\\u0647-\\u0627\\u0644\\u0643\\u062A\\u0627\\u0628\\u0629'", 
			"'\\u0646\\u0645\\u0637-\\u0627\\u0644\\u0643\\u062A\\u0627\\u0628\\u0629'", 
			"'\\u0627\\u0646\\u062D\\u0646\\u0627\\u0621-\\u0627\\u0644\\u0625\\u0637\\u0627\\u0631'", 
			"'\\u0633\\u0645\\u0643-\\u0627\\u0644\\u0625\\u0637\\u0627\\u0631'", 
			"'\\u0646\\u0645\\u0637-\\u0627\\u0644\\u0625\\u0637\\u0627\\u0631'", 
			"'\\u0644\\u0648\\u0646-\\u0627\\u0644\\u0625\\u0637\\u0627\\u0631'", 
			"'\\u062E\\u0637-\\u062E\\u0627\\u0631\\u062C\\u064A'", "'\\u0623\\u0639\\u0644\\u0649'", 
			"'\\u0623\\u0633\\u0641\\u0644'", "'\\u064A\\u0645\\u064A\\u0646'", "'\\u064A\\u0633\\u0627\\u0631'", 
			"'@\\u0648\\u0633\\u0627\\u0626\\u0637'", "'\\u0646\\u0645\\u0637-\\u0627\\u0644\\u0642\\u0627\\u0626\\u0645\\u0629'", 
			"'\\u062F\\u0645\\u062C-\\u0627\\u0644\\u062D\\u062F\\u0648\\u062F'", 
			"'\\u062A\\u0646\\u0633\\u064A\\u0642-\\u0627\\u0644\\u062C\\u062F\\u0648\\u0644'", 
			"'\\u0645\\u0643\\u0627\\u0646-\\u0627\\u0644\\u0639\\u0646\\u0648\\u0627\\u0646'", 
			"'\\u0645\\u0631\\u0634\\u062D'", "'\\u0645\\u0631\\u0634\\u062D-\\u0627\\u0644\\u062E\\u0644\\u0641\\u064A\\u0629'", 
			"'\\u062D\\u0648\\u0645'", "'\\u0646\\u0634\\u0637'", "'\\u062A\\u0631\\u0643\\u064A\\u0632'", 
			"'\\u062A\\u0645-\\u0632\\u064A\\u0627\\u0631\\u062A\\u0647'", "'\\u0645\\u0641\\u0639\\u0644'", 
			"'\\u0645\\u0639\\u0637\\u0644'", "'\\u0645\\u062D\\u062F\\u062F'", "'\\u0642\\u0628\\u0644'", 
			"'\\u0628\\u0639\\u062F'", "'\\u0646\\u0635-\\u0645\\u0624\\u0642\\u062A'", 
			"'\\u062A\\u062D\\u062F\\u064A\\u062F'", "'\\u0648\\u0631\\u0627\\u062B\\u0629'", 
			"'\\u0623\\u0648\\u0644\\u064A'", "'\\u063A\\u064A\\u0631 \\u0645\\u062D\\u062F\\u062F'", 
			"'\\u0644\\u0627-\\u0634\\u064A\\u0621'", "'\\u062A\\u0644\\u0642\\u0627\\u0626\\u064A'", 
			"'\\u0645\\u0631\\u0643\\u0632'", "'\\u0645\\u062A\\u0635\\u0644'", "'\\u0645\\u0642\\u0637\\u0639'", 
			"'\\u0645\\u0646\\u0642\\u0637'", "'\\u0645\\u0632\\u062F\\u0648\\u062C'", 
			"'\\u0645\\u062E\\u0641\\u064A'", "'\\u0643\\u062A\\u0644\\u0629'", "'\\u0633\\u0637\\u0631\\u064A'", 
			"'\\u0645\\u0631\\u0648\\u0646\\u0629'", "'\\u0645\\u0637\\u0644\\u0642'", 
			"'\\u0646\\u0633\\u0628\\u064A'", "'\\u062B\\u0627\\u0628\\u062A'", "'\\u0644\\u0627\\u0635\\u0642'", 
			"'\\u0635\\u0641'", "'\\u0639\\u0645\\u0648\\u062F'", "'\\u0644\\u0641'", 
			"'\\u0645\\u0624\\u0634\\u0631'", "'\\u0639\\u0631\\u064A\\u0636'", "'\\u0645\\u0627\\u0626\\u0644'", 
			"'\\u0647\\u0627\\u0645'", null, null, null, null, null, "'\\u0631\\u0627\\u0628\\u0637'", 
			"'\\u0646\\u0638\\u0627\\u0645-\\u0631_\\u062C_\\u0628'", "'\\u0646\\u0638\\u0627\\u0645-\\u0631_\\u062C_\\u0628_\\u0627'", 
			"'\\u062D\\u0633\\u0627\\u0628'", "'\\u0645\\u062A\\u063A\\u064A\\u0631'", 
			"'\\u062A\\u062F\\u0648\\u064A\\u0631'", "'\\u062A\\u0643\\u0628\\u064A\\u0631'", 
			"'\\u062A\\u063A\\u0628\\u064A\\u0634'", null, null, null, "'{'", "'}'", 
			"':'", "'\\u061B'", "'\\u060C'", "'.'", "'#'", "'('", "')'", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'>'", "'<'", "'~'", "'!'", "'::'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLOSE_TAG", "OPEN_TAG", "TEXT", "DISPLAY", "POSITION", "WIDTH", 
			"HEIGHT", "MAX_WIDTH", "MIN_WIDTH", "MAX_HEIGHT", "MIN_HEIGHT", "MARGIN", 
			"PADDING", "BORDER", "VISIBILITY", "OVERFLOW", "Z_INDEX", "BOX_SIZING", 
			"FLEX", "FLEX_DIR", "FLEX_WRAP", "FLEX_GROW", "FLEX_SHRINK", "GRID", 
			"GRID_TEMPLATE", "GAP", "JUSTIFY_CONT", "ALIGN_ITEMS", "ALIGN_SELF", 
			"ORDER", "COLOR", "BACKGROUND", "BG_IMAGE", "BG_COLOR", "BG_SIZE", "BG_REPEAT", 
			"BG_ATTACH", "BG_CLIP", "OPACITY", "BOX_SHADOW", "FONT_FAMILY", "FONT_SIZE", 
			"FONT_WEIGHT", "FONT_STYLE", "TEXT_ALIGN", "TEXT_DECOR", "TEXT_TRANS", 
			"TEXT_SHADOW", "TEXT_INDENT", "LINE_HEIGHT", "LETTER_SPACING", "WORD_SPACING", 
			"WHITE_SPACE", "DIRECTION", "WRITING_MODE", "BORDER_RADIUS", "BORDER_WIDTH", 
			"BORDER_STYLE", "BORDER_COLOR", "OUTLINE", "TOP", "BOTTOM", "RIGHT", 
			"LEFT", "MEDIA", "LIST_STYLE", "BORDER_COLLAPSE", "TABLE_LAYOUT", "CAPTION_SIDE", 
			"FILTER", "BACKDROP_FILT", "HOVER", "ACTIVE", "FOCUS", "VISITED", "ENABLED", 
			"DISABLED", "CHECKED", "BEFORE", "AFTER", "PLACEHOLDER", "SELECTION", 
			"INHERIT", "INITIAL", "UNSET", "NONE", "AUTO", "CENTER", "SOLID", "DASHED", 
			"DOTTED", "DOUBLE", "KW_HIDDEN", "BLOCK", "INLINE", "FLEX_VALUE", "ABSOLUTE", 
			"RELATIVE", "FIXED", "STICKY", "ROW", "COLUMN", "WRAP", "POINTER", "BOLD", 
			"ITALIC", "IMPORTANT", "UNIT", "NUMBER", "HEX_COLOR", "IDENTIFIER", "STRING", 
			"URL_FUNC", "RGB_FUNC", "RGBA_FUNC", "CALC_FUNC", "VAR_FUNC", "ROTATE_FUNC", 
			"SCALE_FUNC", "BLUR_FUNC", "WS", "COMMENT", "LINE_COMMENT", "LBRACE", 
			"RBRACE", "COLON", "SEMI", "COMMA", "DOT", "HASH", "LPAREN", "RPAREN", 
			"PLUS", "MINUS", "STAR", "SLASH", "PERCENT", "GT", "LT", "TILDE", "BANG", 
			"DBL_COLON"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ArabicWebParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ArabicWebParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocumentContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ArabicWebParser.EOF, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicWebParserListener ) ((ArabicWebParserListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicWebParserListener ) ((ArabicWebParserListener)listener).exitDocument(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 2)) & ~0x3f) == 0 && ((1L << (_la - 2)) & -9223372036854775805L) != 0) || ((((_la - 111)) & ~0x3f) == 0 && ((1L << (_la - 111)) & 2165080065L) != 0)) {
				{
				setState(62);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case OPEN_TAG:
				case TEXT:
					{
					setState(60);
					element();
					}
					break;
				case MEDIA:
				case IDENTIFIER:
				case COLON:
				case DOT:
				case HASH:
				case STAR:
				case DBL_COLON:
					{
					setState(61);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(67);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementContext extends ParserRuleContext {
		public TagElementContext tagElement() {
			return getRuleContext(TagElementContext.class,0);
		}
		public TerminalNode TEXT() { return getToken(ArabicWebParser.TEXT, 0); }
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicWebParserListener ) ((ArabicWebParserListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicWebParserListener ) ((ArabicWebParserListener)listener).exitElement(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPEN_TAG:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				tagElement();
				}
				break;
			case TEXT:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				match(TEXT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TagElementContext extends ParserRuleContext {
		public TerminalNode OPEN_TAG() { return getToken(ArabicWebParser.OPEN_TAG, 0); }
		public TerminalNode CLOSE_TAG() { return getToken(ArabicWebParser.CLOSE_TAG, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public TagElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tagElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicWebParserListener ) ((ArabicWebParserListener)listener).enterTagElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicWebParserListener ) ((ArabicWebParserListener)listener).exitTagElement(this);
		}
	}

	public final TagElementContext tagElement() throws RecognitionException {
		TagElementContext _localctx = new TagElementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tagElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(OPEN_TAG);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OPEN_TAG || _la==TEXT) {
				{
				{
				setState(74);
				element();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(CLOSE_TAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public RulesetContext ruleset() {
			return getRuleContext(RulesetContext.class,0);
		}
		public MediaRuleContext mediaRule() {
			return getRuleContext(MediaRuleContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicWebParserListener ) ((ArabicWebParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicWebParserListener ) ((ArabicWebParserListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
			case COLON:
			case DOT:
			case HASH:
			case STAR:
			case DBL_COLON:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				ruleset();
				}
				break;
			case MEDIA:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				mediaRule();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MediaRuleContext extends ParserRuleContext {
		public TerminalNode MEDIA() { return getToken(ArabicWebParser.MEDIA, 0); }
		public MediaQueryListContext mediaQueryList() {
			return getRuleContext(MediaQueryListContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(ArabicWebParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(ArabicWebParser.RBRACE, 0); }
		public List<RulesetContext> ruleset() {
			return getRuleContexts(RulesetContext.class);
		}
		public RulesetContext ruleset(int i) {
			return getRuleContext(RulesetContext.class,i);
		}
		public MediaRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mediaRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicWebParserListener ) ((ArabicWebParserListener)listener).enterMediaRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArabicWebParserListener ) ((ArabicWebParserListener)listener).exitMediaRule(this);
		}
	}

	public final MediaRuleContext mediaRule() throws RecognitionException {
		MediaRuleContext _localctx = new MediaRuleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mediaRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(MEDIA);
			setState(87);
			mediaQueryList();
			setState(88);
			match(LBRACE);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 111)) & ~0x3f) == 0 && ((1L << (_la - 111)) & 2165080065L) != 0)) {
				{
				{
				setState(89);
				ruleset();
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
